--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,8 @@ importFrom("stats", "addmargins", "aov", "na.omit", "pnorm", "pt",
 importFrom("utils", "combn")
 import(doParallel)
 import(bootstrap)
+S3method(print, CohenK)
+S3method(print, FleissK)
+S3method(print, AgreementTable)
+S3method(print, AgreemGeneralizedVector)
+S3method(print, BAplotMultipleR)
